changed/added plotting routines

--- a/report/prefAttachBrief.tex
+++ b/report/prefAttachBrief.tex
@@ -4,7 +4,7 @@
 \addtolength{\topmargin}{-30mm}
 \setlength{\textwidth}{155mm}
 \setlength{\oddsidemargin}{5mm}
-\usepackage{graphicx, caption, subcaption}
+\usepackage{graphicx, subcaption}
 \graphicspath{ {./figs/} }
 \pagestyle{plain}
 \begin{document}
