--- a/report/balazs_briefing.tex
+++ b/report/balazs_briefing.tex
@@ -6,11 +6,17 @@
 \def\changemargin#1#2{\list{}{\rightmargin#2\leftmargin#1}\item[]}
 \let\endchangemargin=\endlist 
 \begin{document}
-\title{\vspace{-5mm}Edge-Conservative Reconnecting Model Timescales}
-\author{Alexander Holiday}
+\title{\vspace{-5mm}Looking for the Edge-Conservative Reconnecting Model Timescales}
+\author{for Bal\'{a}zs from Alexander with Yannis}
 \maketitle
 
-We are attempting to numerically locate the separate timescales present in the edge conservative reconnecting model. In \cite{Rath2012}, you show that the dynamics create two separate timescales, one of order $n^{2}$, the other $n^{3}$. Seeing these computationally has proven difficult. Figs. 1 to 8 show the evolution of the degree distribution from our numerical implementation of the model at system sizes of $n=500$ and $1000$, and $\kappa = 0.5$. The number of edges was set to $n^{2}$ in each simulation. The figures are arranged as follows: for each system size, there are eight plots, four of the $n^{3}$ timescale and four ``blowups'' revealing the $n^{2}$ scale. The first of the four is a direct 3D plot of the distribution vs. time. The second is a projection along the ``time'' axis. The third takes each consecutive pair of degree sequences, and plots the difference between them. The fourth is a projection along the ``percentile'' axis. The rainbow coloring tracks the evolution of the different percentiles; thus, the maximum degree is colored dark red, the median is colored pale green, and the minimum dark blue. We might expect that the bands of color evolve slowly over the $n^{3}$ scale towards a steady state. Instead, it appears that the system quickly reaches its final state, approximately within $5n^{3}$ steps, at which point significant evolution ceases (minor variations would be expected from the stochastic nature of the dynamics). I've considered two possible explanations for this difficulty, and I'm wondering if you have any insights yourself. The first is that the timescales are not purely $n^{2}$ and $n^{3}$, but, as you show, are $\frac{\rho(W)}{2} n^{2}$ and $\rho(W) n^{3}$. Unfortunately, the calculation of $\rho(W)$ does not appear straightforward, and thus it is difficult to test this hypothesis. Second, these results are proven in the limit of $n \rightarrow \infty$, and our finite system may not exhibit similar properties.
+We are attempting to numerically locate (and actually visualize) the separate timescales present in the edge conservative reconnecting model. In \cite{Rath2012}, you show that the dynamics create two separate timescales, one of order $n^{2}$, the other $n^{3}$. Seeing these computationally has proven challenging. 
+
+Figs. 1 to 8 show different, and hopefully helpful, views of the evolution of the degree distribution from our numerical implementation of the model at system sizes of $n=500$ and $1000$, and $\kappa = 0.5$. The number of edges was set to $n^{2}$ in each simulation, and they were initially distributed uniformly at random over all possible edges.
+
+The figures are arranged as follows: for each system size, there are eight plots, four that we hope are representative of the $n^{3}$ timescale, and four ``blowups'' revealing the $n^{2}$ scale. The first of the four is a direct 3D plot of the distribution vs. time. The second is a projection along the ``time'' axis. {\em For the details of how many snapshots along the evolution are actually shown, and the time intervals between successive snapshots, please see the captions below.} The third takes each pair of these consecutive, degree-sequence snapshots, and plots the differences between them. The fourth is a projection along the ``percentile'' axis. 
+
+The rainbow coloring tracks the evolution of the different percentiles of the degree distribution; thus, the maximum degree, below which 100\% of the other degrees lie, is colored dark red, the median is colored pale green, and the minimum dark blue. We might expect that the bands of color evolve slowly over the $n^{3}$ scale towards a steady state. Instead, it appears that the system relatively quickly reaches its final state, approximately within $5n^{3}$ steps, at which point significant evolution ceases (minor variations would be expected from the stochastic nature of the dynamics). We've considered two possible explanations for this difficulty, and we're wondering if you have any insights yourself. The first is that the timescales are not purely $n^{2}$ and $n^{3}$, but, as you show, are $\frac{\rho(W)}{2} n^{2}$ and $\rho(W) n^{3}$. Unfortunately, the calculation of $\rho(W)$ does not appear straightforward, and thus it is difficult to test this hypothesis. Second, these results are proven in the limit of $n \rightarrow \infty$, and our finite system may not exhibit similar properties.
 \bibliographystyle{abbrv}
 \bibliography{$HOME/Documents/bibTex/library}
 
