slight changes to report and plotting routines

--- a/report/yannis_temp.tex
+++ b/report/yannis_temp.tex
@@ -5,7 +5,7 @@
 \pagestyle{plain}
 \let\endchangemargin=\endlist 
 \begin{document}
-\title{\vspace{-20mm}New initialization preliminary results}
+\title{\vspace{-20mm}New initialization results}
 \author{}
 \date{}
 \maketitle
@@ -16,19 +16,11 @@
   \includegraphics[height=100mm]{simple_edge_density}
 \end{figure}
 
-\centering
 \begin{figure}[h!]
-  \vspace{-5mm}
-  \includegraphics[height=100mm]{deg_step_n3}
+  \vspace{-15mm}
+  \includegraphics[height=100mm]{selfloop_time}
 \end{figure}
 
-\centering
-\begin{figure}[h!]
-  \includegraphics[height=100mm]{degchange_percentile_n3}
-\end{figure}
-
-
-\clearpage
 
 
 \centering
@@ -36,9 +28,18 @@
   \includegraphics[height=100mm]{deg_step_n2}
 \end{figure}
 
+\clearpage
+
 \centering
 \begin{figure}[h!]
-  \includegraphics[height=100mm]{degchange_percentile_n2}
+  \vspace{-5mm}
+  \includegraphics[height=100mm]{deg_step_n3_full}
+\end{figure}
+
+\centering
+\begin{figure}[h!]
+  \vspace{-5mm}
+  \includegraphics[height=100mm]{deg_step_n3_truncated}
 \end{figure}
 
 \end{document}
